2004-08-15  Marcus Meissner  <meissner@suse.de>
	
	* library.c: Added Canon PowerShot A85.

2004-08-15  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added EOS 1D Mark II

2004-08-12  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Canon Powershot S60 as it works.

2004-08-04 Marcus Meissner   <meissner@suse.de>
	
	* Added Canon PowerShot A310 ids as reported.
	* Added Ricoh Caplio GX ids as reported.
	* Added Nikon D70 ids as reported.
	* Added Sony MVC-CD500.

2004-07-16 Mariusz Woloszyn
	* ptp.h: Added NIKON extension code by Corey Manders 
2004-06-23  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Kodak LS-473
	Close RFE #977619 <http://www.gphoto.org/rfe/?id=977619>

2004-06-13  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot S1 IS.

2004-05-29 Mariusz Woloszyn
	* library.c: Fixed a small problem that caused objects of undefined
	type not beeing downloadable. Now they are downloadable if the Thumb
	type is known.

2004-05-24  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot SD110.

2004-05-17  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Canon A75 (PTP mode)

2004-05-12  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Fuji FinePix S7000 (PictBridge mode)

2004-05-11  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Kodak CX4310

2004-04-26  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Canon Digital IXUS 430 /
	  PowerShot S410 as reported.

2004-04-18  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Nikon Coolpix 3200 as reported.

2004-04-13  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Kodak CX7430. Close patch #934142.

2004-04-07  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added HP PhotoSmart 945 (T. Jelbert)
	Close bug #930400

2004-04-02  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added PowerShot S500 (Digital IXUS 500 alias)
